src/grammar/K2Asm6502Parser.js
// Generated from K2Asm6502Parser.g4 by ANTLR 4.9.3
// jshint ignore: start
import antlr4 from 'antlr4';
import K2Asm6502ParserListener from './K2Asm6502ParserListener.js';



const atn = new antlr4.atn.ATNDeserializer().deserialize(serializedATN);

const decisionsToDFA = atn.decisionToState.map( (ds, index) => new antlr4.dfa.DFA(ds, index) );

const sharedContextCache = new antlr4.PredictionContextCache();

export default class K2Asm6502Parser extends antlr4.Parser {

    static grammarFileName = "K2Asm6502Parser.g4";
    static literalNames = [ null, null, "'.'", "':'", null, "'{'", "'}'", 
                            "'('", "')'", "'['", "']'", "'..'", "'.scope'", 
                            "'.global'", null, "'.export'", "'*'", "'/'", 
                            "'-'", "'+'", "'&'", "'|'", "'^'", "'@'", "','", 
                            "'#'", "'x'", "'y'", null, "'.byte'", "'.word'", 
                            "'.align'", "'.buf'", "'.enc'", "'.encoding'", 
                            "'.enum'", "'.require'", "'.incbin'", "'.begin'", 
                            null, null, null, null, "'%!PS'", "';'", null, 
                            null, null, "'jmp'", null, null, null, null, 
                            null, null, "'<'", "'>'", "'<<'", "'>>'" ];
    static symbolicNames = [ null, "WS", "DOT", "COLON", "EQUAL", "OPEN_CURLY", 
                             "CLOSE_CURLY", "OPEN_PARENS", "CLOSE_PARENS", 
                             "OPEN_SQUARE", "CLOSE_SQUARE", "UPTO", "SCOPE", 
                             "GLOBAL", "LOCAL", "EXPORT", "STAR", "DIVIDE", 
                             "MINUS", "PLUS", "AND", "OR", "EOR", "ATSIGN", 
                             "COMMA", "HASH", "X", "Y", "ORG", "BYTE", "WORD", 
                             "ALIGN", "BUF", "ENC", "ENCODING", "ENUM", 
                             "REQUIRE", "INCBIN", "BLOCK_OPEN", "SHELL_OPEN", 
                             "PBM_OPEN", "SVG_OPEN", "YAML_OPEN", "EPS_OPEN", 
                             "COMMENT_OPEN", "ID", "OPC_REL", "OPC_1", "OPC_JMP", 
                             "OPC_0", "OPC_2", "DEC", "HEX", "BIN", "STRING", 
                             "LEFT", "RIGHT", "SHL", "SHR", "TIME", "TIMEFRAMES", 
                             "COMMENT_BODY", "BLOCK_BODY", "SVG_BODY", "YAML_BODY", 
                             "EPS_BODY", "SHELL_BODY", "PBM_BODY" ];
    static ruleNames = [ "input", "line", "comment", "scope", "label", "assign", 
                         "modifier", "annotation", "expr", "pseudo", "opcode", 
                         "timef", "enumItem", "idlist", "list", "array", 
                         "map", "pair", "key", "dec", "bin", "hex" ];

    constructor(input) {
        super(input);
        this._interp = new antlr4.atn.ParserATNSimulator(this, atn, decisionsToDFA, sharedContextCache);
        this.ruleNames = K2Asm6502Parser.ruleNames;
        this.literalNames = K2Asm6502Parser.literalNames;
        this.symbolicNames = K2Asm6502Parser.symbolicNames;
    }

    get atn() {
        return atn;
    }

    sempred(localctx, ruleIndex, predIndex) {
    	switch(ruleIndex) {
    	case 8:
    	    		return this.expr_sempred(localctx, predIndex);
        default:
            throw "No predicate with index:" + ruleIndex;
       }
    }

    expr_sempred(localctx, predIndex) {
    	switch(predIndex) {
    		case 0:
    			return this.precpred(this._ctx, 15);
    		case 1:
    			return this.precpred(this._ctx, 14);
    		case 2:
    			return this.precpred(this._ctx, 13);
    		case 3:
    			return this.precpred(this._ctx, 4);
    		default:
    			throw "No predicate with index:" + predIndex;
    	}
    };




	input() {
	    let localctx = new InputContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 0, K2Asm6502Parser.RULE_input);
	    var _la = 0; // Token type
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 47;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        while((((_la) & ~0x1f) == 0 && ((1 << _la) & ((1 << K2Asm6502Parser.OPEN_CURLY) | (1 << K2Asm6502Parser.SCOPE) | (1 << K2Asm6502Parser.GLOBAL) | (1 << K2Asm6502Parser.LOCAL) | (1 << K2Asm6502Parser.EXPORT) | (1 << K2Asm6502Parser.ATSIGN) | (1 << K2Asm6502Parser.ORG) | (1 << K2Asm6502Parser.BYTE) | (1 << K2Asm6502Parser.WORD) | (1 << K2Asm6502Parser.ALIGN))) !== 0) || ((((_la - 32)) & ~0x1f) == 0 && ((1 << (_la - 32)) & ((1 << (K2Asm6502Parser.BUF - 32)) | (1 << (K2Asm6502Parser.ENC - 32)) | (1 << (K2Asm6502Parser.ENCODING - 32)) | (1 << (K2Asm6502Parser.ENUM - 32)) | (1 << (K2Asm6502Parser.REQUIRE - 32)) | (1 << (K2Asm6502Parser.INCBIN - 32)) | (1 << (K2Asm6502Parser.BLOCK_OPEN - 32)) | (1 << (K2Asm6502Parser.SHELL_OPEN - 32)) | (1 << (K2Asm6502Parser.COMMENT_OPEN - 32)) | (1 << (K2Asm6502Parser.ID - 32)) | (1 << (K2Asm6502Parser.OPC_REL - 32)) | (1 << (K2Asm6502Parser.OPC_1 - 32)) | (1 << (K2Asm6502Parser.OPC_JMP - 32)) | (1 << (K2Asm6502Parser.OPC_0 - 32)) | (1 << (K2Asm6502Parser.OPC_2 - 32)))) !== 0)) {
	            this.state = 44;
	            this.line();
	            this.state = 49;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        }
	        this.state = 50;
	        this.match(K2Asm6502Parser.EOF);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	line() {
	    let localctx = new LineContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 2, K2Asm6502Parser.RULE_line);
	    var _la = 0; // Token type
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 55;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        while(_la===K2Asm6502Parser.COMMENT_OPEN) {
	            this.state = 52;
	            this.comment();
	            this.state = 57;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        }
	        this.state = 63;
	        this._errHandler.sync(this);
	        var la_ = this._interp.adaptivePredict(this._input,2,this._ctx);
	        switch(la_) {
	        case 1:
	            this.state = 58;
	            this.scope();
	            break;

	        case 2:
	            this.state = 59;
	            this.label();
	            break;

	        case 3:
	            this.state = 60;
	            this.assign();
	            break;

	        case 4:
	            this.state = 61;
	            this.pseudo();
	            break;

	        case 5:
	            this.state = 62;
	            this.opcode();
	            break;

	        }
	        this.state = 68;
	        this._errHandler.sync(this);
	        var _alt = this._interp.adaptivePredict(this._input,3,this._ctx)
	        while(_alt!=2 && _alt!=antlr4.atn.ATN.INVALID_ALT_NUMBER) {
	            if(_alt===1) {
	                this.state = 65;
	                this.comment(); 
	            }
	            this.state = 70;
	            this._errHandler.sync(this);
	            _alt = this._interp.adaptivePredict(this._input,3,this._ctx);
	        }

	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	comment() {
	    let localctx = new CommentContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 4, K2Asm6502Parser.RULE_comment);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 71;
	        this.match(K2Asm6502Parser.COMMENT_OPEN);
	        this.state = 72;
	        this.match(K2Asm6502Parser.COMMENT_BODY);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	scope() {
	    let localctx = new ScopeContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 6, K2Asm6502Parser.RULE_scope);
	    var _la = 0; // Token type
	    try {
	        this.state = 98;
	        this._errHandler.sync(this);
	        switch(this._input.LA(1)) {
	        case K2Asm6502Parser.OPEN_CURLY:
	        case K2Asm6502Parser.ATSIGN:
	            localctx = new UnnamedScopeContext(this, localctx);
	            this.enterOuterAlt(localctx, 1);
	            this.state = 75;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	            if(_la===K2Asm6502Parser.ATSIGN) {
	                this.state = 74;
	                this.annotation();
	            }

	            this.state = 77;
	            this.match(K2Asm6502Parser.OPEN_CURLY);
	            this.state = 81;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	            while((((_la) & ~0x1f) == 0 && ((1 << _la) & ((1 << K2Asm6502Parser.OPEN_CURLY) | (1 << K2Asm6502Parser.SCOPE) | (1 << K2Asm6502Parser.GLOBAL) | (1 << K2Asm6502Parser.LOCAL) | (1 << K2Asm6502Parser.EXPORT) | (1 << K2Asm6502Parser.ATSIGN) | (1 << K2Asm6502Parser.ORG) | (1 << K2Asm6502Parser.BYTE) | (1 << K2Asm6502Parser.WORD) | (1 << K2Asm6502Parser.ALIGN))) !== 0) || ((((_la - 32)) & ~0x1f) == 0 && ((1 << (_la - 32)) & ((1 << (K2Asm6502Parser.BUF - 32)) | (1 << (K2Asm6502Parser.ENC - 32)) | (1 << (K2Asm6502Parser.ENCODING - 32)) | (1 << (K2Asm6502Parser.ENUM - 32)) | (1 << (K2Asm6502Parser.REQUIRE - 32)) | (1 << (K2Asm6502Parser.INCBIN - 32)) | (1 << (K2Asm6502Parser.BLOCK_OPEN - 32)) | (1 << (K2Asm6502Parser.SHELL_OPEN - 32)) | (1 << (K2Asm6502Parser.COMMENT_OPEN - 32)) | (1 << (K2Asm6502Parser.ID - 32)) | (1 << (K2Asm6502Parser.OPC_REL - 32)) | (1 << (K2Asm6502Parser.OPC_1 - 32)) | (1 << (K2Asm6502Parser.OPC_JMP - 32)) | (1 << (K2Asm6502Parser.OPC_0 - 32)) | (1 << (K2Asm6502Parser.OPC_2 - 32)))) !== 0)) {
	                this.state = 78;
	                this.line();
	                this.state = 83;
	                this._errHandler.sync(this);
	                _la = this._input.LA(1);
	            }
	            this.state = 84;
	            this.match(K2Asm6502Parser.CLOSE_CURLY);
	            break;
	        case K2Asm6502Parser.SCOPE:
	            localctx = new NamedScopeContext(this, localctx);
	            this.enterOuterAlt(localctx, 2);
	            this.state = 85;
	            this.match(K2Asm6502Parser.SCOPE);
	            this.state = 86;
	            this.match(K2Asm6502Parser.ID);
	            this.state = 88;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	            if(_la===K2Asm6502Parser.ATSIGN) {
	                this.state = 87;
	                this.annotation();
	            }

	            this.state = 90;
	            this.match(K2Asm6502Parser.OPEN_CURLY);
	            this.state = 94;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	            while((((_la) & ~0x1f) == 0 && ((1 << _la) & ((1 << K2Asm6502Parser.OPEN_CURLY) | (1 << K2Asm6502Parser.SCOPE) | (1 << K2Asm6502Parser.GLOBAL) | (1 << K2Asm6502Parser.LOCAL) | (1 << K2Asm6502Parser.EXPORT) | (1 << K2Asm6502Parser.ATSIGN) | (1 << K2Asm6502Parser.ORG) | (1 << K2Asm6502Parser.BYTE) | (1 << K2Asm6502Parser.WORD) | (1 << K2Asm6502Parser.ALIGN))) !== 0) || ((((_la - 32)) & ~0x1f) == 0 && ((1 << (_la - 32)) & ((1 << (K2Asm6502Parser.BUF - 32)) | (1 << (K2Asm6502Parser.ENC - 32)) | (1 << (K2Asm6502Parser.ENCODING - 32)) | (1 << (K2Asm6502Parser.ENUM - 32)) | (1 << (K2Asm6502Parser.REQUIRE - 32)) | (1 << (K2Asm6502Parser.INCBIN - 32)) | (1 << (K2Asm6502Parser.BLOCK_OPEN - 32)) | (1 << (K2Asm6502Parser.SHELL_OPEN - 32)) | (1 << (K2Asm6502Parser.COMMENT_OPEN - 32)) | (1 << (K2Asm6502Parser.ID - 32)) | (1 << (K2Asm6502Parser.OPC_REL - 32)) | (1 << (K2Asm6502Parser.OPC_1 - 32)) | (1 << (K2Asm6502Parser.OPC_JMP - 32)) | (1 << (K2Asm6502Parser.OPC_0 - 32)) | (1 << (K2Asm6502Parser.OPC_2 - 32)))) !== 0)) {
	                this.state = 91;
	                this.line();
	                this.state = 96;
	                this._errHandler.sync(this);
	                _la = this._input.LA(1);
	            }
	            this.state = 97;
	            this.match(K2Asm6502Parser.CLOSE_CURLY);
	            break;
	        default:
	            throw new antlr4.error.NoViableAltException(this);
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	label() {
	    let localctx = new LabelContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 8, K2Asm6502Parser.RULE_label);
	    var _la = 0; // Token type
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 101;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        if((((_la) & ~0x1f) == 0 && ((1 << _la) & ((1 << K2Asm6502Parser.GLOBAL) | (1 << K2Asm6502Parser.LOCAL) | (1 << K2Asm6502Parser.EXPORT))) !== 0)) {
	            this.state = 100;
	            this.modifier();
	        }

	        this.state = 103;
	        this.match(K2Asm6502Parser.ID);
	        this.state = 104;
	        this.match(K2Asm6502Parser.COLON);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	assign() {
	    let localctx = new AssignContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 10, K2Asm6502Parser.RULE_assign);
	    var _la = 0; // Token type
	    try {
	        this.state = 152;
	        this._errHandler.sync(this);
	        var la_ = this._interp.adaptivePredict(this._input,16,this._ctx);
	        switch(la_) {
	        case 1:
	            localctx = new SimpleAssignContext(this, localctx);
	            this.enterOuterAlt(localctx, 1);
	            this.state = 107;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	            if((((_la) & ~0x1f) == 0 && ((1 << _la) & ((1 << K2Asm6502Parser.GLOBAL) | (1 << K2Asm6502Parser.LOCAL) | (1 << K2Asm6502Parser.EXPORT))) !== 0)) {
	                this.state = 106;
	                this.modifier();
	            }

	            this.state = 109;
	            this.match(K2Asm6502Parser.ID);
	            this.state = 114;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	            while(_la===K2Asm6502Parser.DOT) {
	                this.state = 110;
	                this.match(K2Asm6502Parser.DOT);
	                this.state = 111;
	                this.match(K2Asm6502Parser.ID);
	                this.state = 116;
	                this._errHandler.sync(this);
	                _la = this._input.LA(1);
	            }
	            this.state = 117;
	            this.match(K2Asm6502Parser.EQUAL);
	            this.state = 118;
	            this.expr(0);
	            break;

	        case 2:
	            localctx = new SizeAssignContext(this, localctx);
	            this.enterOuterAlt(localctx, 2);
	            this.state = 120;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	            if((((_la) & ~0x1f) == 0 && ((1 << _la) & ((1 << K2Asm6502Parser.GLOBAL) | (1 << K2Asm6502Parser.LOCAL) | (1 << K2Asm6502Parser.EXPORT))) !== 0)) {
	                this.state = 119;
	                this.modifier();
	            }

	            this.state = 122;
	            this.match(K2Asm6502Parser.ID);
	            this.state = 127;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	            while(_la===K2Asm6502Parser.DOT) {
	                this.state = 123;
	                this.match(K2Asm6502Parser.DOT);
	                this.state = 124;
	                this.match(K2Asm6502Parser.ID);
	                this.state = 129;
	                this._errHandler.sync(this);
	                _la = this._input.LA(1);
	            }
	            this.state = 130;
	            this.match(K2Asm6502Parser.EQUAL);
	            this.state = 131;
	            this.expr(0);
	            this.state = 132;
	            this.match(K2Asm6502Parser.OPEN_SQUARE);
	            this.state = 133;
	            this.expr(0);
	            this.state = 134;
	            this.match(K2Asm6502Parser.CLOSE_SQUARE);
	            break;

	        case 3:
	            localctx = new UptoAssignContext(this, localctx);
	            this.enterOuterAlt(localctx, 3);
	            this.state = 137;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	            if((((_la) & ~0x1f) == 0 && ((1 << _la) & ((1 << K2Asm6502Parser.GLOBAL) | (1 << K2Asm6502Parser.LOCAL) | (1 << K2Asm6502Parser.EXPORT))) !== 0)) {
	                this.state = 136;
	                this.modifier();
	            }

	            this.state = 139;
	            this.match(K2Asm6502Parser.ID);
	            this.state = 144;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	            while(_la===K2Asm6502Parser.DOT) {
	                this.state = 140;
	                this.match(K2Asm6502Parser.DOT);
	                this.state = 141;
	                this.match(K2Asm6502Parser.ID);
	                this.state = 146;
	                this._errHandler.sync(this);
	                _la = this._input.LA(1);
	            }
	            this.state = 147;
	            this.match(K2Asm6502Parser.EQUAL);
	            this.state = 148;
	            this.expr(0);
	            this.state = 149;
	            this.match(K2Asm6502Parser.UPTO);
	            this.state = 150;
	            this.expr(0);
	            break;

	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	modifier() {
	    let localctx = new ModifierContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 12, K2Asm6502Parser.RULE_modifier);
	    try {
	        this.state = 157;
	        this._errHandler.sync(this);
	        switch(this._input.LA(1)) {
	        case K2Asm6502Parser.LOCAL:
	            localctx = new LocalModifierContext(this, localctx);
	            this.enterOuterAlt(localctx, 1);
	            this.state = 154;
	            this.match(K2Asm6502Parser.LOCAL);
	            break;
	        case K2Asm6502Parser.GLOBAL:
	            localctx = new GlobalModifierContext(this, localctx);
	            this.enterOuterAlt(localctx, 2);
	            this.state = 155;
	            this.match(K2Asm6502Parser.GLOBAL);
	            break;
	        case K2Asm6502Parser.EXPORT:
	            localctx = new ExportModifierContext(this, localctx);
	            this.enterOuterAlt(localctx, 3);
	            this.state = 156;
	            this.match(K2Asm6502Parser.EXPORT);
	            break;
	        default:
	            throw new antlr4.error.NoViableAltException(this);
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	annotation() {
	    let localctx = new AnnotationContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 14, K2Asm6502Parser.RULE_annotation);
	    try {
	        this.state = 167;
	        this._errHandler.sync(this);
	        var la_ = this._interp.adaptivePredict(this._input,18,this._ctx);
	        switch(la_) {
	        case 1:
	            localctx = new SimpleAnnotationContext(this, localctx);
	            this.enterOuterAlt(localctx, 1);
	            this.state = 159;
	            this.match(K2Asm6502Parser.ATSIGN);
	            this.state = 160;
	            this.match(K2Asm6502Parser.ID);
	            break;

	        case 2:
	            localctx = new ArgAnnotationContext(this, localctx);
	            this.enterOuterAlt(localctx, 2);
	            this.state = 161;
	            this.match(K2Asm6502Parser.ATSIGN);
	            this.state = 162;
	            this.match(K2Asm6502Parser.ID);
	            this.state = 163;
	            this.match(K2Asm6502Parser.OPEN_PARENS);
	            this.state = 164;
	            this.list();
	            this.state = 165;
	            this.match(K2Asm6502Parser.CLOSE_PARENS);
	            break;

	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}


	expr(_p) {
		if(_p===undefined) {
		    _p = 0;
		}
	    const _parentctx = this._ctx;
	    const _parentState = this.state;
	    let localctx = new ExprContext(this, this._ctx, _parentState);
	    let _prevctx = localctx;
	    const _startState = 16;
	    this.enterRecursionRule(localctx, 16, K2Asm6502Parser.RULE_expr, _p);
	    var _la = 0; // Token type
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 209;
	        this._errHandler.sync(this);
	        var la_ = this._interp.adaptivePredict(this._input,22,this._ctx);
	        switch(la_) {
	        case 1:
	            localctx = new UnaryMinusContext(this, localctx);
	            this._ctx = localctx;
	            _prevctx = localctx;

	            this.state = 170;
	            this.match(K2Asm6502Parser.MINUS);
	            this.state = 171;
	            this.expr(16);
	            break;

	        case 2:
	            localctx = new PrefixOpContext(this, localctx);
	            this._ctx = localctx;
	            _prevctx = localctx;
	            this.state = 172;
	            _la = this._input.LA(1);
	            if(!(_la===K2Asm6502Parser.LEFT || _la===K2Asm6502Parser.RIGHT)) {
	            this._errHandler.recoverInline(this);
	            }
	            else {
	            	this._errHandler.reportMatch(this);
	                this.consume();
	            }
	            this.state = 173;
	            this.expr(12);
	            break;

	        case 3:
	            localctx = new StringContext(this, localctx);
	            this._ctx = localctx;
	            _prevctx = localctx;
	            this.state = 174;
	            this.match(K2Asm6502Parser.STRING);
	            break;

	        case 4:
	            localctx = new YamlContext(this, localctx);
	            this._ctx = localctx;
	            _prevctx = localctx;
	            this.state = 175;
	            this.match(K2Asm6502Parser.YAML_OPEN);
	            this.state = 176;
	            this.match(K2Asm6502Parser.YAML_BODY);
	            break;

	        case 5:
	            localctx = new SvgContext(this, localctx);
	            this._ctx = localctx;
	            _prevctx = localctx;
	            this.state = 177;
	            this.match(K2Asm6502Parser.SVG_OPEN);
	            this.state = 178;
	            this.match(K2Asm6502Parser.SVG_BODY);
	            break;

	        case 6:
	            localctx = new PbmContext(this, localctx);
	            this._ctx = localctx;
	            _prevctx = localctx;
	            this.state = 179;
	            this.match(K2Asm6502Parser.PBM_OPEN);
	            this.state = 180;
	            this.match(K2Asm6502Parser.PBM_BODY);
	            break;

	        case 7:
	            localctx = new EpsContext(this, localctx);
	            this._ctx = localctx;
	            _prevctx = localctx;
	            this.state = 181;
	            this.match(K2Asm6502Parser.EPS_OPEN);
	            this.state = 182;
	            this.match(K2Asm6502Parser.EPS_BODY);
	            break;

	        case 8:
	            localctx = new NumberContext(this, localctx);
	            this._ctx = localctx;
	            _prevctx = localctx;
	            this.state = 189;
	            this._errHandler.sync(this);
	            switch(this._input.LA(1)) {
	            case K2Asm6502Parser.DEC:
	                this.state = 183;
	                this.dec();
	                break;
	            case K2Asm6502Parser.BIN:
	                this.state = 184;
	                this.bin();
	                break;
	            case K2Asm6502Parser.HEX:
	                this.state = 185;
	                this.hex();
	                break;
	            case K2Asm6502Parser.TIME:
	            case K2Asm6502Parser.TIMEFRAMES:
	                this.state = 186;
	                this.timef();
	                break;
	            case K2Asm6502Parser.OPEN_SQUARE:
	                this.state = 187;
	                this.array();
	                break;
	            case K2Asm6502Parser.OPEN_CURLY:
	                this.state = 188;
	                this.map();
	                break;
	            default:
	                throw new antlr4.error.NoViableAltException(this);
	            }
	            break;

	        case 9:
	            localctx = new DotContext(this, localctx);
	            this._ctx = localctx;
	            _prevctx = localctx;
	            this.state = 191;
	            this.match(K2Asm6502Parser.ID);
	            this.state = 194; 
	            this._errHandler.sync(this);
	            var _alt = 1;
	            do {
	            	switch (_alt) {
	            	case 1:
	            		this.state = 192;
	            		this.match(K2Asm6502Parser.DOT);
	            		this.state = 193;
	            		this.match(K2Asm6502Parser.ID);
	            		break;
	            	default:
	            		throw new antlr4.error.NoViableAltException(this);
	            	}
	            	this.state = 196; 
	            	this._errHandler.sync(this);
	            	_alt = this._interp.adaptivePredict(this._input,20, this._ctx);
	            } while ( _alt!=2 && _alt!=antlr4.atn.ATN.INVALID_ALT_NUMBER );
	            break;

	        case 10:
	            localctx = new ScriptExpressionContext(this, localctx);
	            this._ctx = localctx;
	            _prevctx = localctx;
	            this.state = 198;
	            this.match(K2Asm6502Parser.ID);
	            this.state = 199;
	            this.match(K2Asm6502Parser.OPEN_PARENS);
	            this.state = 201;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	            if((((_la) & ~0x1f) == 0 && ((1 << _la) & ((1 << K2Asm6502Parser.OPEN_CURLY) | (1 << K2Asm6502Parser.OPEN_PARENS) | (1 << K2Asm6502Parser.OPEN_SQUARE) | (1 << K2Asm6502Parser.STAR) | (1 << K2Asm6502Parser.MINUS) | (1 << K2Asm6502Parser.PLUS))) !== 0) || ((((_la - 40)) & ~0x1f) == 0 && ((1 << (_la - 40)) & ((1 << (K2Asm6502Parser.PBM_OPEN - 40)) | (1 << (K2Asm6502Parser.SVG_OPEN - 40)) | (1 << (K2Asm6502Parser.YAML_OPEN - 40)) | (1 << (K2Asm6502Parser.EPS_OPEN - 40)) | (1 << (K2Asm6502Parser.ID - 40)) | (1 << (K2Asm6502Parser.DEC - 40)) | (1 << (K2Asm6502Parser.HEX - 40)) | (1 << (K2Asm6502Parser.BIN - 40)) | (1 << (K2Asm6502Parser.STRING - 40)) | (1 << (K2Asm6502Parser.LEFT - 40)) | (1 << (K2Asm6502Parser.RIGHT - 40)) | (1 << (K2Asm6502Parser.TIME - 40)) | (1 << (K2Asm6502Parser.TIMEFRAMES - 40)))) !== 0)) {
	                this.state = 200;
	                this.list();
	            }

	            this.state = 203;
	            this.match(K2Asm6502Parser.CLOSE_PARENS);
	            break;
